--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>net.whydah.sso</groupId>
     <artifactId>Whydah-Java-SDK</artifactId>
-    <version>2.2.23-SNAPSHOT</version>
+    <version>2.2.25-SNAPSHOT</version>
     <name>Whydah-Admin-SDK</name>
     <packaging>jar</packaging>
     <url>https://wiki.cantara.no/display/iam/Whydah-Java-SDK</url>
@@ -73,7 +73,7 @@
 
     <properties>
         <service.name>Whydah-Admin-SDK</service.name>
-        <whydah-javasdk.version>2.2.24</whydah-javasdk.version>
+        <whydah-java-sdk-version>2.2.24</whydah-java-sdk-version>
         <additionalparam>-Xdoclint:none</additionalparam>
     </properties>
 
@@ -81,7 +81,7 @@
         <dependency>
             <groupId>net.whydah.sso</groupId>
             <artifactId>Whydah-Java-SDK</artifactId>
-            <version>${whydah-javasdk.version}</version>
+            <version>${whydah-java-sdk-version}</version>
             <exclusions>
                 <exclusion>
                     <groupId>asm</groupId>
