--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
 
     <properties>
         <service.name>Whydah-Admin-SDK</service.name>
-        <whydah.sdk.version>2.3.0-SNAPSHOT</whydah.sdk.version>
+        <whydah.sdk.version>2.3.0-alpha-2</whydah.sdk.version>
         <additionalparam>-Xdoclint:none</additionalparam>
     </properties>
 
