--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,7 @@
 
     <properties>
         <service.name>Whydah-Admin-SDK</service.name>
-        <whydah.sdk.version>2.3.0-alpha-24</whydah.sdk.version>
+        <whydah.sdk.version>2.3.0-beta-1</whydah.sdk.version>
         <additionalparam>-Xdoclint:none</additionalparam>
     </properties>
 
