fixing pom  (junit bom)

--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,19 @@
             <organizationUrl>https://wiki.cantara.no/</organizationUrl>
         </developer>
     </developers>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.junit</groupId>
+                <artifactId>junit-bom</artifactId>
+                <version>5.12.0</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <dependencies>
         <dependency>
             <groupId>net.whydah.sso</groupId>
